fix action buttons alignment

--- a/app/assets/stylesheets/sections/title_bar/title_bar.scss
+++ b/app/assets/stylesheets/sections/title_bar/title_bar.scss
@@ -19,7 +19,7 @@
     justify-self: flex-end;
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
 
     height: 3.75em;
 
@@ -27,7 +27,6 @@
 
     @media screen and (min-width: 75em) {
       flex: 0 0 auto;
-      justify-content: flex-end;
       border: 0;
     }
   }
